# agora

agora-api/: README.md  pyproject.toml
agora-api/agora_api/: __init__.py  __main__.py
agora-api/agora_api/controller/: agent.py  discussion.py  index.py  llm.py
agora-api/agora_api/database/: agent.py  db.py  discussion.py  message.py  models.py
agora-api/agora_api/database/crud/: agent.py
agora-api/agora_api/llm/: google_gemini_llm_client.py  llm_client.py
agora-frontend/: .gitignore  package-lock.json  package.json
agora-frontend/src/: main.js
agora-frontend/src/assets/: main.css
agora-frontend/src/components/: Message.vue
agora-frontend/src/router/: index.js
agora-frontend/src/views/: DiscussionView.vue  HomeView.vue
